# 2d_lidar_odom_cpp

./: .gitignore  CMakeLists.txt  README.md  Task.md  install_deps.sh  trajectory.txt  trajectory_with_orientation.txt  visualize_trajectory.py
apps/: CMakeLists.txt  basic_nearest_neighbor.cpp  kd_tree_based_nanoflann.cpp  kd_tree_scratch.cpp  main.cpp  main_kd_tree.cpp  main_kd_tree_nanoflann.cpp  main_modular.cpp  main_pt1_kd_tree.cpp  main_pt2_error.cpp  main_pt3_jacobian.cpp  main_pt4_hessian.cpp  main_pt5_final.cpp  main_pt5v1_final.cpp  main_pt6_2d_lidar_odom.cpp  main_pt6_2d_lidar_odom_nanoflann.cpp  main_pt6v2_2d_lidar_odom.cpp  main_pt7_2d_lidar_odom.cpp  main_single.cpp  main_visualize.cpp  testing.cpp
dataloader/: CMakeLists.txt
icp/: CMakeLists.txt  icp.cpp  icp.hpp  kdtree.cpp  kdtree.hpp
viewer/: viewer.cpp  viewer.hpp
